--- a/body/_body.scss
+++ b/body/_body.scss
@@ -44,7 +44,10 @@ $text-grey:#696969;
 body {
     font-family: 'Jost', sans-serif;
 }
-
+ul{
+    padding: 0px;
+    margin: 0px;
+}
 li {
     list-style: none;
 }
