--- a/css/about.css
+++ b/css/about.css
@@ -216,6 +216,10 @@ footer .bottom p a {
   opacity: 1;
 }
 
+img {
+  width: 100%;
+}
+
 .about .container .about-content {
   padding: 90px 0px;
 }
@@ -226,6 +230,7 @@ footer .bottom p a {
   line-height: 32px;
   opacity: 0.9;
 }
+
 .history .feature {
   background: url(../img/banner2.jpg) no-repeat center;
   background-size: cover;
@@ -257,4 +262,66 @@ footer .bottom p a {
   color: #fff;
   font-size: 20px;
   font-weight: 700;
+}
+.choose .container .choose-content .choose-left {
+  text-align: right;
+}
+.choose .container .choose-content .choose-left img {
+  border-radius: 10px;
+}
+.choose .container .choose-content .choose-right {
+  padding-left: 24px !important;
+}
+.choose .container .choose-content .choose-right .row .icon i {
+  color: #189a46;
+  font-size: 44px;
+}
+.choose .container .choose-content .choose-right .row .choose-content-title h6 {
+  font-size: 24px;
+  font-weight: 600;
+  color: #000c04;
+}
+
+.team {
+  background-color: rgba(147, 107, 232, 0.05);
+}
+.team .container .team-content {
+  text-align: center;
+}
+.team .container .team-content .team-group .team-item .item-content {
+  overflow: hidden;
+}
+.team .container .team-content .team-group .team-item .item-content img {
+  border-radius: 10px;
+  transition: all 0.5s;
+}
+.team .container .team-content .team-group .team-item .item-content .item-content-title h3 {
+  margin-top: 16px;
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 34px;
+}
+.team .container .team-content .team-group .team-item .item-content .item-content-title h3 a {
+  color: #000c04;
+  transition: all 0.5s;
+}
+.team .container .team-content .team-group .team-item .item-content .item-content-title .item-content-icon i {
+  margin-right: 6px;
+  width: 30px;
+  height: 30px;
+  color: #189a46;
+  line-height: 30px;
+  font-size: 12px;
+  background-color: rgba(147, 107, 232, 0.05);
+  transition: all 0.5s;
+}
+.team .container .team-content .team-group .team-item .item-content .item-content-title .item-content-icon i:hover {
+  color: #fff;
+  background: #189a46;
+}
+.team .container .team-content .team-group .team-item:hover .item-content img {
+  transform: scale(1.1);
+}
+.team .container .team-content .team-group .team-item:hover .item-content .item-content-title h3 a {
+  color: #189a46;
 }
